ISIS-1277 reflective access: opens javax.xml/javax.xml.bind